# ble-poc

./: .talismanrc  Makefile
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/mosip/greetings/: ListDevicesActivity.kt  MainActivity.kt
android/app/src/main/java/io/mosip/greetings/ble/: Central.kt  Common.kt  Peripheral.kt  UUIDHelper.kt
android/app/src/main/java/io/mosip/greetings/cryptography/: CipherBox.java  CipherBoxImpl.java  CipherBoxPackage.java  CipherPackage.java  CryptoBox.java  CryptoBoxBuilder.java  CryptoBoxImpl.java  KeyGenerator.java  SecretsTranslator.java  SenderTransfersOwnershipOfData.java  VerifierCryptoBox.java  (+5 more)
android/app/src/main/res/layout/: activity_device_list.xml
ios/bluetoothdemo/: MyPeripheral.swift
ios/bluetoothdemo/bluetoothdemo/: CentralChatView.swift  CentralController.swift  CentralView.swift  ChatController.swift  ChatMessageView.swift  ChatView.swift  CipherBox.swift  ContentView.swift  CryptoBox.swift  Message.swift  MessageView.swift  PeripheralBuild.swift  PeripheralChatView.swift  PeripheralController.swift  PeripheralView.swift  TransferServiceController.swift  User.swift  bluetoothdemoApp.swift
ios/bluetoothdemo/bluetoothdemo.xcodeproj/: project.pbxproj
ios/bluetoothdemo/bluetoothdemo/cryptography/CipherBox/: CipherBox.swift  CipherBoxImpl.swift
ios/bluetoothdemo/bluetoothdemo/cryptography/CryptoBox/: CryptoBox.swift  CryptoBoxImpl.swift
ios/bluetoothdemo/bluetoothdemo/cryptography/SecretTranslator/: SecretTranslator.swift  SenderTransfersOwnershipOfData.swift
ios/bluetoothdemo/bluetoothdemo/cryptography/Utils/: CipherPackage.swift  CryptoConstants.swift  KeyGenerator.swift
ios/bluetoothdemo/bluetoothdemo/cryptography/Wallet/: WalletCryptoBox.swift  WalletCryptoBoxBuilder.swift  WalletCryptoBoxImpl.swift
ios/bluetoothdemo/bluetoothdemoTests/: bluetoothdemoTests.swift
ios/bluetoothdemo/bluetoothdemoUITests/: bluetoothdemoUITests.swift  bluetoothdemoUITestsLaunchTests.swift
ios/ios-errors/: Service Data.txt
ios/iosBLEDemo/CoreBluetoothLESample/: CentralViewController.swift  ChatViewController.swift  Message.swift  PeripheralViewController.swift  TransferService.swift
ios/iosBLEDemo/CoreBluetoothLESample.xcodeproj/: project.pbxproj
ios/iosBLEDemo/CoreBluetoothLESample/Base.lproj/: Main.storyboard
ios/rusty-ios/rusty-ios/: ContentView.swift
rustlib-binding/: Cargo.toml
rustlib-binding/src/: androidjni.rs  identity.udl  lib.rs
(+3 files in other folders)
