[package]
name = "rustylib-binding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustylib_binding"
# this is needed to build for iOS and Android. flapigen requires cdylib
crate-type = ["staticlib", "cdylib"]

#[build]
#target = ["aarch64-linux-android", "x86_64-linux-android"]

# Don't know what this jni setting does ???
# this dependency is only needed for Android.
[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.11.1", default-features = false }

[dependencies]
purerust = { path = "../purerust"}
log = "0.4.6"
log-panics = "2.0"
uniffi_macros = "0.21.0" #when you change uniffi version change all of them in one shot
uniffi = "0.21.0"
lazy_static = "1.4.0"
aes-gcm = "0.10.1"
rand_core = { version = "0.5", default-features = false } # Should match with version x25519-dalek uses
x25519-dalek = "1.2.0"

[build-dependencies]
env_logger = "0.9"
uniffi_build = "0.21.0"